tests/suite/snapshots/suite__check__tests__check__bad_global_1.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_global_1.xi:1:10]
   │
 1 │ x: int = y
   ·          ┬  
   ·          ╰── Unbound variable y
───╯

